--- a/tests/common/meson.build
+++ b/tests/common/meson.build
@@ -50,6 +50,7 @@ libtestcommon = static_library('testcomon',
                     libdbi_dep,
                     libsctp_dep,
                     libgtp_dep,
+                    libs1ap_dep,
                     libngap_dep,
                     libnas_eps_dep,
                     libnas_5gs_dep,
@@ -64,6 +65,7 @@ libtestcommon_dep = declare_dependency(
                     libdbi_dep,
                     libsctp_dep,
                     libgtp_dep,
+                    libs1ap_dep,
                     libngap_dep,
                     libnas_eps_dep,
                     libnas_5gs_dep,
