--- a/tests/common/meson.build
+++ b/tests/common/meson.build
@@ -31,11 +31,14 @@ libtestcommon_sources = files('''
     ngap-path.c
 
     s1ap-build.c
+    s1ap-handler.c
+    s1ap-path.c
 
     gmm-build.c
     gmm-handler.c
     gsm-build.c
     gsm-handler.c
+
     nas-path.c
     nas-encoder.c
     nas-security.c
